force-app/main/default/objects/InvoiceItem__c/fields/Invoiceable__c.field-meta.xml
<CustomField>
    <fullName>Invoiceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiceable</label>
    <type>Checkbox</type>
</CustomField>